<resources>
    <string name="app_name">ClientesABC CR</string>
    <string name="title_activity_login">Maestro Clientes Femsa</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contrasena</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Usuario de HH Invalido</string>
    <string name="error_invalid_user_mc">Usuario de MC Invalido</string>
    <string name="error_invalid_password">Contrasena Invalida</string>
    <string name="error_incorrect_password">Contrasena Incorrecta</string>
    <string name="error_field_required">El campo es obligatorio!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="solicitud">Solicitud Inclusion</string>
    <string name="comunicacion">Comunicacion</string>
    <string name="enviar_encuestas_pendientes">Transmitir encuestas</string>
    <string name="title_activity_comunicacion">Actualización de Datos</string>
    <string name="title_activity_firma_cr">CONSENTIMIENTO INFORMADO PARA EL TRATAMIENTO DE DATOS PERSONALES</string>
    <string name="title_activity_firma_ni">AVISO INFORMATIVO</string>
    <string name="title_activity_firma_pa">CONSENTIMIENTO INFORMADO PARA EL TRATAMIENTO DE DATOS PERSONALES</string>
    <string name="title_activity_firma_gt">AVISO INFORMATIVO</string>
    <string name="title_activity_firma_abvo">AVISO INFORMATIVO</string>
    <string name="title_activity_firma_uy">Firma Aceptación Uso de Datos del Cliente</string>
    <string name="title_activity_firma_co">DECLARACIONES Y OBLIGACIONES RESPECTO DEL LA/FT/FPADM</string>
    <string name="title_activity_firma_t4">Firma Constancia Cliente</string>
    <string name="title_activity_firma_credito">Aceptación condiciones de crédito</string>
    <string name="title_activity_solicitud">Crear Solicitud</string>
    <string name="title_activity_aviso">Avisos de Equipo frio</string>
    <string name="title_activity_racks">Racks</string>
    <string name="company_title_activity_firma_tarjeta_cr">COCA COLA FEMSA DE COSTA RICA</string>
    <string name="company_title_activity_firma_tarjeta_ni">COCA COLA FEMSA DE NICARAGUA</string>
    <string name="company_title_activity_firma_tarjeta_pa">VENTAS y MERCADEO S.A.</string>
    <string name="company_title_activity_firma_tarjeta_em">COCA COLA FEMSA DE GUATEMALA</string>
    <string name="company_title_activity_firma_tarjeta_ab">COCA COLA ABASA</string>
    <string name="company_title_activity_firma_tarjeta_vo">COCA COLA LOS VOLCANES</string>
    <string name="title_activity_firma_tarjeta_cr">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="title_activity_firma_tarjeta_ni">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="title_activity_firma_tarjeta_pa">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="title_activity_firma_tarjeta_em">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="title_activity_firma_tarjeta_ab">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="title_activity_firma_tarjeta_vo">ACTA DE ENTREGA DE TARJETA DE REGALO</string>
    <string name="inicial">MAESTRO CLIENTES APP</string>
    <string name="welcome_back">Bienvenido</string>
    <string name="read_it_together">Junto</string>
    <string name="skip">Saltar</string>
    <string name="login">Login</string>
    <string name="email">Usuario</string>
    <string name="password">Password</string>
    <string name="sign_up">Ingresar</string>
    <string name="forget_password">Olvido su contrasena.?</string>
    <string name="title_activity_mant_clientes">Mis Clientes</string>
    <string name="title_activity_solicitudes">Mis Solicitudes</string>
    <string name="title_activity_locacion_gps">Coordenadas GPS</string>
    <string name="title_activity_panel">Monitor de Solicitudes</string>
    <string name="title_activity_cliente">%1$s - %2$s</string>
    <string name="title_activity_base_instalada">Base Instalada</string>
    <string name="title_activity_equipo_disponible">Equipo Disponible x Modelo</string>
    <string name="title_activity_monitor_equipo_frio">Monitor Equipo Frio</string>
    <string name="unidad_caja_monitor">CFC</string>
    <string name="promptKvgr4">promptKvgr4</string>
    <string name="label_vp">Plan de Visita</string>
    <string name="label_pregunta">%1$s) %2$s</string>
    <string name="palabras_2">%1$s %2$s</string>
    <string name="texto_modificar">Modificar</string>
    <string name="texto_cuenta_bancaria">Cuenta Bancaria</string>
    <string name="texto_interlocutor">Interlocutor</string>
    <string name="texto_visita">Plan de Visita</string>
    <string name="texto_contacto">Contacto</string>
    <string name="texto_impuesto">Impuesto</string>
    <string name="max_secuencia">1339</string>
    <string name="error_max_secuencia">La secuencia no puede ser mayor 1339!</string>
    <string name="texto_sin_datos">Sin Datos</string>
    <string name="title_activity_TCP">Comunicacion con el Servidor</string>
    <string name="longitud">Longitud</string>
    <string name="longitud_label">Longitud:</string>
    <string name="latitud">Latitud</string>
    <string name="latitud_label">Latitud:</string>
    <string name="signo_menos">-</string>
    <string name="aceptar">Aceptar</string>
    <string name="limpiar">Limpiar</string>
    <string name="signo_mas">+</string>
    <string name="no_activity">Ninguna aplicacion en el dispositivo puede escoger archivos. Mostrando alternativas.</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="politica_privacidad_cr_bk">En cumplimiento de la Ley de Protección de la Persona frente al Tratamiento de sus Datos Personales No. 8968 y su Reglamento, COCA-COLA FEMSA DE COSTA RICA, S.A, garantiza la protección de todos los datos personales que le sean facilitados en virtud del presente Formulario. Los datos personales recopilados serán utilizados única y exclusivamente para fines internos de COCA-COLA FEMSA DE COSTA RICA, S.A, y no serán de ninguna manera comercializados o transferidos a terceras personas. Los clientes podrán ejercer en todo momento su derecho al acceso, rectificación, supresión de sus datos personales. Para la recopilación y tratamiento de datos personales se aplicarán los protocolos de seguridad necesarios para proteger los datos personales contra su destrucción, pérdida, alteración, acceso, divulgación o uso accidental, ilegal o no autorizado. Los protocolos de seguridad utilizados para la recopilación y tratamiento de datos personales son: Custodiar, almacenar o transportar las bases de datos solamente en dispositivos KOF que están bajo los estándares de seguridad de T.I. de la empresa.  2- El usuario no debe custodiar, almacenar o transportar las bases de datos en dispositivos USB, discos externos, CD, u otros dispositivos externos. 3- El usuario no debe enviar las bases de datos a correos electrónicos personales, de proveedores, clientes u otros que no sean KOF.4- El usuario no debe colocar bases de datos en Share Point, en la nube o en carpetas compartidas.5- El envió de bases de datos por medio de correos electrónicos KOF se debe realizar cuando tiene conexión a la red KOF o cuando está utilizando VPN. 6- El usuario no debe prestar los accesos a sistemas a ningún colaborador interno o externo, incluyendo niveles superiores. 7- La entrega de la base de datos a terceros autorizados, se debe realizar en el medio físico o electrónico que establezca T.I., previo, contrato de confidencialidad formal Cualquier consulta relacionada con esta política de privacidad, así como cualquier solicitud de acceso, rectificación, supresión de datos personales, deberá realizarse escribiendo al correo electrónico: ciscam@kof.com Asimismo, con la firma del presente formulario  se autoriza expresamente a COCA-COLA FEMSA DE COSTA RICA, S.A a recopilar sus datos personales y se aceptan las condiciones de esta política de privacidad.</string>
    <string name="firma_tarjetas_cr"><![CDATA[ Por este medio, y con el objetivo de acordar la negociación del plan y condiciones requeridas se negocia el espacio dentro del punto de venta por un periodo de: <b>%1$s</b> y se hace entrega de una tarjeta de regalo por un monto de: <b>₡ %2$s</b> al siguiente beneficiario:
    <br/><br/>
    <b>Codigo cliente :</b> %3$s<br/>
    <b>Nombre :</b> %4$s<br/>
    <b>Cédula :</b> %5$s<br/>
    <b>Teléfonos :</b> %6$s<br/>
    <b>Ruta Preventa :</b> %7$s<br/>
    <b>Número de Tarjeta :</b> %8$s<br/>]]></string>
    <string name="acercade">Info. sistema</string>
    <string name="borrar_datos">Eliminar Datos</string>
    <string name="configuracion">Configuración General</string>
</resources>