<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/acercade"
            android:icon="@drawable/icon_about"
            android:title="@string/acercade"
            app:showAsAction="never|withText">
            >
        </item>
        <item
            android:id="@+id/comunicacion"
            android:title="@string/comunicacion"
            android:icon="@drawable/icon_communication"
            app:showAsAction="never|withText">
        </item>
        <item
            android:id="@+id/configuracion"
            android:icon="@drawable/icon_app_settings"
            android:title="@string/configuracion"
            android:visible="false"
            app:showAsAction="never|withText"></item>
        <item
            android:id="@+id/borrar_datos"
            android:title="@string/borrar_datos"
            android:icon="@drawable/icon_delete"
            app:showAsAction="never|withText">
        </item>
        <item
            android:id="@+id/actualizar_version"
            android:title="Actualizar version"
            android:icon="@drawable/icon_update"
            app:showAsAction="never|withText">
        </item>

    </group>

</menu>
