<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <FrameLayout
        android:id="@+id/documento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9">
    <LinearLayout
        android:id="@+id/canvasLL"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_gravity="bottom">
    </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnclear"
            android:text="@string/limpiar"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnsave"
            android:text="@string/aceptar"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomin"
            android:text="@string/signo_mas"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomout"
            android:text="@string/signo_menos"/>

    </LinearLayout>

</LinearLayout>