<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.FirmaActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:layout_margin="0dp"
        >
        <LinearLayout
            android:id="@+id/completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:id="@+id/documento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/texto_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:maxLines="2"
            android:text="COCA COLA FEMSA DE COSTA RICA"
            android:textAlignment="center"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/texto_nombre_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:maxLines="2"
            android:text="Nombre del cliente"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/texto_titulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:maxLines="2"
            android:text="ACTA DE ENTREGA DE TARJETA DE REGALO"
            android:textAlignment="center"
            android:textColor="@color/colorTextView"
            android:paddingTop="10dp"
            />
        <TextView
            android:id="@+id/texto_hr"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:singleLine="true"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorTextView"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/texto_fecha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:maxLines="2"
                android:text="Fecha de Entrega: 01/01/2021"
                android:textAlignment="textStart"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            <TextView
                android:id="@+id/label_motivo"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:maxLines="2"
                android:text="MOTIVO DE ENTREGA DE LA TARJETA"
                android:textAlignment="textStart"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                />

                <TextView
                    android:id="@+id/texto_motivo"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/textbackground"
                    android:maxLines="2"
                    android:paddingTop="10dp"
                    android:singleLine="false"
                    android:text="REGALÍA"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:id="@+id/texto_cuadro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/texto_titulo"
            android:singleLine="false"
            android:text="@string/firma_tarjetas_cr"
            android:maxLines="1000"
            android:minLines="3"
            android:padding="@dimen/margin_medium"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextView"
            android:maxLength="1000000"
            />
        <de.codecrafters.tableview.TableView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cuadro_tarjetas"
            >
        </de.codecrafters.tableview.TableView>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/canvasLL"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:background="@drawable/canvas_background">
        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:singleLine="true"
                android:text="Firma del Cliente"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@color/sinFormularios"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@drawable/squared_textbackground"
        >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnclear"
            android:text="@string/limpiar"
            />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnsave"
            android:text="@string/aceptar"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomin"
            android:text="@string/signo_mas"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnzoomout"
            android:text="@string/signo_menos"/>
    </LinearLayout>

</LinearLayout>